# piazza

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_notes_table.py  003_add_member_is_active.py  004_add_message_log.py  005_add_group_approval_status.py  006_drop_expense_category_split_type.py  007_drop_unused_columns.py  008_drop_group_settings.py  009_encrypt_content_drop_injection_log.py  010_add_checklist_items.py  011_add_group_welcome_sent.py  012_add_reminder_recurrence.py  013_add_settlement_currency.py
config/: evolution.env.example  injection_patterns.example.json
dev_tools/: screen_message.py
docs/mvp/: deployment_guide.md
src/piazza/: conftest.py  main.py  smoke_test.py
src/piazza/admin/: notify.py  notify_test.py
src/piazza/agent/: __init__.py  __init___test.py  agent.py  agent_test.py  base.py  claude.py  context.py  context_test.py  fireworks.py  fireworks_test.py  opensource.py
src/piazza/agent/prompts/: __init__.py  system.txt
src/piazza/config/: constants.py  settings.py
src/piazza/core/: currency.py  currency_test.py  encryption.py  encryption_test.py  exceptions.py  fx.py  fx_test.py
src/piazza/db/: base.py  engine.py
src/piazza/messaging/: __init__.py
src/piazza/tools/: __init__.py  registry.py  responses.py  schemas.py
src/piazza/workers/: jobs.py  jobs_test.py  process_message.py  process_message_test.py
(+73 files in other folders)
