[project]
name = "piazza"
version = "0.1.0"
description = "WhatsApp group productivity agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "redis>=5.2",
    "arq>=0.26",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "anthropic>=0.42",
    "dateparser>=1.2",
    "cryptography>=44.0",
    "llm-guard>=0.3",
    "sentry-sdk[fastapi]>=2.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "aiosqlite>=0.20",
    "fakeredis>=2.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/piazza"]
exclude = ["**/*_test.py", "**/conftest.py"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src"]
python_files = ["*_test.py"]

[dependency-groups]
dev = [
    "lupa>=2.6",
]
